cargo-features = ["strip"]

[package]
name = "sopush"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
structopt = "0.3"
once_cell = "1.8.0"
walkdir = "2"
tracing = "0.1"
tracing-subscriber = "0.2"
zip = "0.5"
tempfile = "3.2.0"
regex = "1.5.4"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1